# dmitriy_alushkin_django_dz

./: .env.sample  README.md
project/: catalog_data.json  pyproject.toml
project/catalog/: admin.py  catalog_data.json  forms.py  models.py  urls.py  views.py
project/catalog/management/commands/: fill.py
project/catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_blogentry.py  0004_alter_blogentry_options.py  0005_alter_blogentry_sign_of_publication.py  0006_alter_blogentry_number_of_views_version.py  0007_product_user.py  0008_alter_version_is_active.py  0009_product_is_published.py  0010_alter_product_is_published.py  0011_alter_product_is_published.py  0012_alter_product_options.py
project/catalog/templates/main/: base.html  blog_entry_detail.html  blog_entry_list.html  blogentry_detail.html  blogentry_form.html  blogentry_list.html  categories.html  category_list.html  index.html  product-detail.html  product_form.html  product_name.html
project/catalog/templates/main/includes/: inc_category.html
project/catalog/templatetags/: my_tags.py
project/config/: settings.py  urls.py
project/users/: forms.py  models.py  urls.py  views.py
project/users/management/commands/: ccsu.py
project/users/migrations/: 0001_initial.py  0002_user_code_alter_user_is_active.py
project/users/templates/users/: code.html  login.html  profile.html  register.html
