[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["dmitriyalushkin <pantific37@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.17.2"
pytils = "^0.4.1"
django-dump-load-utf8 = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
